Updating sgw start files to fix a license issue